# dynamic_system_identification_with_ml

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: cuda4wsl.md
notebook/: identification_batchrun.ipynb  modeling.ipynb
system_models/: statespacesimulator.py
